# DenseKAN

./: CMakeLists.txt  README.md  kan_layer.c  main.c  splines.c
src/: main.c
src/CUDA/: kan_layer.cu
src/KAN/: kan_layer.h  splines.c  splines.h
